cluster/apps/game-servers/ue4/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ue4
  namespace: external
spec:
  type: ExternalName
  externalName: 10.10.10.178
  ports:
    - port: 7777
