cluster/apps/game-servers/ue4/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-production
    forecastle.stakater.com/expose: "true"
    forecastle.stakater.com/icon: ""
  name: ue4
  namespace: external
spec:
  rules:
  - host: ue4.witlinserver.com
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: ue4
            port:
              number: 7777
  tls:
  - hosts:
    - ue4.witlinserver.com
    secretName: ue4-cert
